# memo_tables

./: .gitignore  AGENTS.md  alembic.ini  country_flags.py  database.py  langgraph.json  main.py  pyproject.toml  serve.py
.langgraph_api/: .langgraph_ops.pckl
.scratch/example-feature/: PRD.md
alembic/: env.py
alembic/versions/: 0352dbd4b87a_create_word_translations_table.py  0dbeaec1b6c2_create_topic_translations_table.py  (+22 more)
core/: menu.py  render.py  templates.py
crud/: language_pairs.py  languages.py  rules.py
docs/: privacy_policy.md  terms_of_service.md
graphs/: initial_rule_graph.py  llm.py  models.py  prompts.py  rule_agent.py  states.py  suggest_rules_agent.py  suggest_rules_graph.py
models/: __init__.py  base_word_topics.py  base_words.py  entity_embeddings.py  expression_topics.py  expression_translations.py  expressions.py  grammar_rule_row_translations.py  grammar_rule_rows.py  grammar_rule_translations.py  grammar_rules.py  language.py  language_pairs.py  sentence_translations.py  sentences.py  topic_translations.py  topics.py  word_categories.py  word_form_sentences.py  word_form_translations.py  word_forms.py  word_rule_assignments.py  word_translations.py
routers/: admin_dashboard.py  auth.py  create_rule_agent.py  grammar_rules.py  language_pairs.py  languages.py  legal_pages.py  save_rule.py  user_login.py
scripts/: create_admin_user.py  migrate.sh  start.sh  stop.sh
static/: htmx.min.js
static/css/: admin-panel.css  (+2 more)
supabase/: config.toml
templates/: admin-panel-languages.html  admin-panel-rules.html  admin-panel.html  login.html
(+29 files in other folders)
