[project]
name = "memo-tables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langsmith>=0.8.11",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlmodel>=0.0.38",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
